samples/_failures_safe/1761430824_70b080_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d7e1da9.c: In function ‘print_compression_info’:
./samples/SAFE/__tmp_8d7e1da9.c:143:12: error: missing terminating " character
  143 |     printf("  Flags:
      |            ^~~~~~~~~
./samples/SAFE/__tmp_8d7e1da9.c:143:5: error: expected expression at end of input
  143 |     printf("  Flags:
      |     ^~~~~~
./samples/SAFE/__tmp_8d7e1da9.c:143:5: error: expected declaration or statement at end of input
